--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start —-web"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
