--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/slider": "^4.4.0",
     "@react-native-picker/picker": "2.4.8",
@@ -20,6 +21,7 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@react-navigation/stack": "^6.3.10",
+    "@reduxjs/toolkit": "^1.9.1",
     "@shopify/react-native-skia": "0.1.157",
     "expo": "~47.0.9",
     "expo-checkbox": "~2.2.2",
@@ -50,6 +52,9 @@
     "react-native-tab-view": "^3.3.4",
     "react-native-textarea": "^1.0.4",
     "react-native-web": "~0.18.9",
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "webpack-dev-server": "^4.11.1"
   },
   "devDependencies": {
