--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/blur": "^4.3.0",
+    "@react-native-community/datetimepicker": "^6.7.2",
     "@react-native-community/slider": "^4.4.0",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.2",
@@ -30,12 +31,15 @@
     "expo-react-native-shadow": "^1.0.3",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "nanoid": "^4.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-date-picker": "^4.2.6",
     "react-native-drop-shadow": "^0.0.6",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-input-scroll-view": "^1.11.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
@@ -44,6 +48,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-select-dropdown": "^3.2.1",
     "react-native-shadow": "^1.2.2",
     "react-native-shadow-2": "^7.0.6",
     "react-native-side-menu": "^1.1.3",
@@ -51,6 +56,8 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.3.4",
     "react-native-textarea": "^1.0.4",
+    "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux-logger": "^3.0.6",
