--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "dreamscape",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "DreamScape",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
+    "start": "react-native start",
+    "test": "jest"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.2",
+    "expo": "^47.0.0",
+    "expo-asset": "^8.7.0",
+    "expo-modules-core": "^1.1.1",
+    "react": "18.2.0",
+    "react-native": "0.71.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/datetimepicker": "^6.7.2",
+    "@react-native-community/eslint-config": "^3.0.0",
     "@react-native-community/slider": "^4.4.0",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.2",
@@ -24,17 +35,22 @@
     "@react-navigation/stack": "^6.3.10",
     "@reduxjs/toolkit": "^1.9.1",
     "@shopify/react-native-skia": "0.1.157",
-    "expo": "~47.0.9",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
     "expo-checkbox": "~2.2.2",
     "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-react-native-shadow": "^1.0.3",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.73.7",
     "nanoid": "^4.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "prettier": "^2.4.1",
     "react-native-date-picker": "^4.2.6",
     "react-native-drop-shadow": "^0.0.6",
     "react-native-dropdown-picker": "^5.4.4",
@@ -45,7 +61,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.0.1",
     "react-native-radio-buttons-group": "^2.3.0",
-    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-select-dropdown": "^3.2.1",
@@ -60,13 +76,12 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
+    "react-test-renderer": "18.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
-    "webpack-dev-server": "^4.11.1"
+    "typescript": "4.8.4"
   },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "webpack-cli": "^5.0.1"
-  },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
