--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "expo-asset": "^8.7.0",
     "expo-modules-core": "^1.1.1",
     "react": "18.2.0",
-    "react-native": "0.71.1"
+    "react-native": "0.71.1",
+    "react-native-reanimated": "^2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,7 +35,6 @@
     "@react-navigation/native-stack": "^6.9.7",
     "@react-navigation/stack": "^6.3.10",
     "@reduxjs/toolkit": "^1.9.1",
-    "@shopify/react-native-skia": "0.1.157",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
@@ -61,7 +61,6 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.0.1",
     "react-native-radio-buttons-group": "^2.3.0",
-    "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-select-dropdown": "^3.2.1",
